streamsample update